--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg py-3 navbar-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand mb-0 h1 font1" href="/">
+        <a class="navbar-brand mb-0 h1 font1" href="/about">
             <!-- <img src="" alt="Logo"
           width="100" height="24" class="d-inline-block align-text-center"> -->
             Fast Cinema
@@ -11,10 +11,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav me-auto">
-                <a class="nav-link navMenu" href="/about">Fast Cinema</a>
+                <a class="nav-link navMenu" href="/movies">Home</a>
                 <% if (currentUser) {%>
                 <a class="nav-link navMenu" href="/users">Topup</a>
-                <a class="nav-link navMenu" href="/movies">Themes</a>
                 <% } %>
             </div>
             <div class="navbar-nav ms-auto">
