--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -4,7 +4,7 @@
 
     <% for (let movie of moviesArr){ %>
     <div class="card cardIndex overflow-hidden">
-        <a href="/movies/<%= moviesArr.indexOf(movie) || '' %>" class="text-decoration-none text-dark">
+        <a href="/movies/<%= (moviesArr.indexOf(movie)).toString() || '' %>" class="text-decoration-none text-dark">
             <div class="card-header border-0">
                 <div>
                     <div class="text-light">
