--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -10,6 +10,13 @@
             </div>
         </div>
         <div class="form-group mb-3">
+            <label for="age" class="my-2">Age</label>
+            <input type="number" class="form-control" id="age" name="user[age]" spellcheck="false" required>
+            <div class="invalid-feedback">
+                Add your age!
+            </div>
+        </div>
+        <div class="form-group mb-3">
             <label for="email" class="my-2">Email</label>
             <input type="email" class="form-control" id="email" name="user[email]" spellcheck="false" required>
             <div class="invalid-feedback">
