--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,12 +3,10 @@ body {
     /* transition: 0.3s; */
 }
 
-main {
-    padding: 0;
-}
 
 .mainPage {
-    padding-top: 80px;
+    padding-top: 100px;
+    padding-bottom: 20px;
 }
 
 .colorLightGreen {
