--- a/views/users/tickets.ejs
+++ b/views/users/tickets.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <nav>
     <div class="nav nav-tabs d-flex flex-row justify-content-between" id="nav-tab" role="tablist">
-        <button class="nav-link ongoing" id="nav-ongoing-tab" data-bs-toggle="tab" data-bs-target="#nav-ongoing"
+        <button class="nav-link active" id="nav-ongoing-tab" data-bs-toggle="tab" data-bs-target="#nav-ongoing"
             type="button" role="tab" aria-controls="nav-ongoing" aria-selected="true">Ongoing</button>
         <button class="nav-link" id="nav-past-tab" data-bs-toggle="tab" data-bs-target="#nav-past" type="button"
             role="tab" aria-controls="nav-past" aria-selected="false">Past</button>
@@ -10,22 +10,61 @@
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
-    <% for (let bookedSeat of bookedSeats) {%>
-    <% if (bookedSeat.status == "ongoing") {%>
     <div class="tab-pane fade show active" id="nav-ongoing" role="tabpanel" aria-labelledby="nav-ongoing-tab"
         tabindex="0">
-        <div>
-            <%= bookedSeat.fromBookedTicket.title %>
+        <div id="tabTicketContainer" class="d-flex flex-row justify-content-around flex-wrap">
+            <% for (let bookedSeat of bookedSeats) {%>
+            <% if (bookedSeat.status == "ongoing") {%>
+            <div class="card cardRow my-3 col-sm-4 mx-3">
+                <div class="row  tabTicket g-0 rounded-end">
+                    <div class="col-md-4">
+                        <img src="<%= bookedSeat.fromBookedTicket.poster_url || '' %>" class="img-fluid rounded-start"
+                            alt="...">
+                    </div>
+                    <div class="col-md-8 d-flex flex-column ">
+                        <div class="card-header  seaCinemaGradient">
+                            <h5 class="card-title text-light mb-0 py-2"><%= bookedSeat.fromBookedTicket.title %></h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text">Release Date : <%= bookedSeat.fromBookedTicket.release_date %></div>
+                            <div class="card-text">Age Rating :
+                                <%= bookedSeat.fromBookedTicket.age_rating %>
+                            </div>
+                            <div class="card-text">Status :
+                                <span class="text-success"><%= bookedSeat.status %></span>
+                            </div>
+                            <div class="mt-2">
+                                <form action="/users/<%= currentUser._id %>/cancel/<%= bookedSeat._id %>" method="POST">
+                                    <button class="btn btn-sm btn-danger">Cancel Booking</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="card-footer  seaCinemaGradient">
+                            <h5 class="card-title text-light mb-0 py-2">Seat Number : <span
+                                    class=" fw-bold"><%= bookedSeat.seatNumber %></span></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% } %>
+            <% } %>
         </div>
     </div>
-    <% } else if (bookedSeat.status == "past") {%>
+
     <div class="tab-pane fade" id="nav-past" role="tabpanel" aria-labelledby="nav-past-tab" tabindex="0">
+        <% for (let bookedSeat of bookedSeats) {%>
+        <% if (bookedSeat.status == "past") {%>
 
+        <% } %>
+        <% } %>
     </div>
-    <% } else if (bookedSeat.status == "cancelled") {%>
+
     <div class="tab-pane fade" id="nav-cancelled" role="tabpanel" aria-labelledby="nav-cancelled-tab" tabindex="0">
+        <% for (let bookedSeat of bookedSeats) {%>
+        <% if (bookedSeat.status == "cancelled") {%>
 
+        <% } %>
+        <% } %>
     </div>
-    <% } %>
-    <% } %>
+
 </div>
