--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,20 @@
 <footer class="footer py-2 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy; info brand</span>
+        <div class="d-flex flex-row flex-wrap justify-content-center align-items-center">
+            <span class="text-muted">by achmadaffandifauzan : </span>
+            <a href="https://github.com/achmadaffandifauzan" class="mx-2 text-decoration-none" target="_blank">
+                <img width="25px" src="/icons/github.svg" alt="">
+            </a>
+            <a href="https://www.linkedin.com/in/achmad-affandi-fauzan-3458061bb/" class="mx-2 text-decoration-none"
+                target="_blank">
+                <img width="25px" src="/icons/linkedin.svg" alt="">
+            </a>
+            <a href="https://www.instagram.com/achmadaffandifauzan/" class="mx-2 text-decoration-none" target="_blank">
+                <img width="25px" src="/icons/instagram.svg" alt="">
+            </a>
+            <a href="https://twitter.com/aaffandif" class="mx-2 text-decoration-none" target="_blank">
+                <img width="25px" src="/icons/twitter.svg" alt="">
+            </a>
+        </div>
     </div>
 </footer>
